# orp

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
bindings/go/: go.mod
bindings/go/orp/: client.go  conformance_test.go  doc.go  sign.go  types.go
bindings/swift/: orp_core.h
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
conformance/: run.sh
conformance/vectors/: v0.1.json  v0.2.json
crates/orp-bridge/: Cargo.toml
crates/orp-bridge/src/: degrade.rs  embed.rs  extract.rs  inference.rs  lib.rs
crates/orp-cli/: Cargo.toml
crates/orp-cli/src/: main.rs
crates/orp-core/: Cargo.toml
crates/orp-core/src/: budget.rs  canonical.rs  discovery.rs  error.rs  lib.rs  limits.rs  policy.rs  receipt.rs  reputation.rs  request.rs  response.rs  sign.rs  validate.rs
crates/orp-server/: Cargo.toml
crates/orp-server/src/: auth.rs  config.rs  db.rs  deliver.rs  discovery.rs  keys.rs  lib.rs  routes.rs  smtp.rs  state.rs  webhook.rs
docs/: GOVERNANCE.md  LAUNCH.md
scripts/: build-wasm.sh
spec/: BATCH_DELIVERY.md  SPEC.md
spec/examples/: discovery.json  policy.json  request.json  response.json
spec/schemas/: discovery.json  policy.json  request.json  response.json
