[workspace]
resolver = "2"
members = [
    "crates/orp-core",
    "crates/orp-server",
    "crates/orp-bridge",
    "crates/orp-cli",
    "bindings/wasm",
]
default-members = ["crates/orp-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/openrequestprotocol/orp"
authors = ["Open Request Protocol Contributors"]

[workspace.dependencies]
orp-core = { path = "crates/orp-core" }
orp-bridge = { path = "crates/orp-bridge" }
orp-server = { path = "crates/orp-server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
mailparse = "0.15"
dns-lookup = "2"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
