[package]
name = "orp-wasm"
description = "WASM bindings for ORP core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orp-core = { workspace = true }
wasm-bindgen = "0.2"
serde_json = { workspace = true }

[dependencies.web-sys]
version = "0.3"
optional = true
