[package]
name = "orp-bridge"
description = "Email bridge for Open Request Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
orp-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
mailparse = { workspace = true }
chrono = { workspace = true }
mail-builder = "0.4.4"

[dev-dependencies]
orp-core = { workspace = true }
