[package]
name = "orp-server"
description = "Federated home server for Open Request Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
orp-core = { workspace = true }
orp-bridge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
lettre = { workspace = true }

[dev-dependencies]
orp-core = { workspace = true }
